-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.3, 6.1.0
-
11e88eaa6df629a2c23a60815a1f7826dd2ac31a (qt/qtbase/dev) 1a081042abda3a32efeedeba7879017eed9237c6 (qt/qtbase/6.1) 4a75c99aa93873678ec6dc0ef5c3e843aa509847 (qt/tqtc-qtbase/5.15)
There is a problem with showing content of the QComboBox . Please refer to the attached sample. There is one ComboBox just at the top of the form. It contains 5 values: "NO_AAA" << "GREEN" << "YELLOW" << "SUSTAINABLE" << "OTHER_AAA";
When the form is shown the size of the ComboBox is greater then the largest item of the list. There are shown all 5 items (see picture_1.png). Then when resize the form to be narrowed as possible and roll out the CB then there are seen only four of them - the last is missing (see picture_2.png). Then when the form is again resized - just a bit - and roll out the CB again all five items are seen again.
| For Gerrit Dashboard: QTBUG-93736 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 350940,2 | QComboBox: add space for scrollbar if needed after showing popup | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 351723,2 | QComboBox: add space for scrollbar if needed after showing popup | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |
| 351727,2 | QComboBox: add space for scrollbar if needed after showing popup | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |