QComboBox: add space for scrollbar if needed after showing popup

QComboBox tests if a horizontal scrollbar is needed before sizing and
showing the popup, but QListView only knows whether a scrollbar is needed
only after laying itself out during the initial show and paint event.

So test whether the need has arisen as part of this initial layout, and
then provide the additional space. Resizing the widget after showing it
is not ideal, but in practice makes no visible difference (and it's
either way preferable to not being able to access the item covered by
the scrollbar).

Fixes: QTBUG-93736
Change-Id: I0bf077e18116ce174ae7f9218cb3b0dfa82964e1
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
(cherry picked from commit 11e88eaa6df629a2c23a60815a1f7826dd2ac31a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>